		Added KVO for isPaused (issue #1324)
. [NEW] DrawingPrimitives: Added ccDrawPoly() free function
. [NEW] LabelTTF: fontName and fontSize are properties
. [NEW] LabelBMFont: added setFntFile method (issue #1119)
		Added support for image offset in order to share the texture (issue #762)
		Added support for any unicode char (issue #770)
. [NEW] Menu: could be created/initialized using NSArray
		Menu could be created without items
		Menu could be enabled/disabled (no events will be accepted when it is disabled)
		It is possible to change its priority on runtime
		Renamed kCCMenuTouchPriority -> kCCMenuHandlerPriority
. [NEW] Node: userData has the option of being retained and treated like an id.
. [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
. [NEW] TextureAtlas: Added option to not use VAO (might be a bit slower, but it consumes less memory)
. [NEW] TileMap: polygon, polilines and gid are parsed from the objects (issue #1311)
. [FIX] All: replaced some NSLog() with CCLOG() is some parts of the code (issue #1250)
. [FIX] Actions: Instant actions are trigged on stop and not start (issue #1305)
. [FIX] CocosDenshion: fixed memory leak on CDBufferLoadRequest (issue #1286)
. [FIX] CocosDenshion: fixed issue when background music looping was not respected on resume if playback was stopped (issue #1284)
. [FIX] Director: It is possible to re-init a director after it has been quit (issue #1313)
. [FIX] Director: becomes firstResponder after toggling fullscreen (Mac only) (issue #1189)
. [FIX] DrawingPrimitives: drawColor4f() uses GLFloat instead of GLbyte (issue #1307)
. [FIX] GLProgram: report error correctly if vertex shader has compile issues
. [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
. [FIX] GLView: MSAA support is working (issue #1315)
. [FIX] Label: LabelBMFont fixed y-offset in RetinaDisplay (issue #1309)