@@ -297,33 +297,33 @@ static CCTextureCache *sharedTextureCache;
 #ifdef __CC_PLATFORM_IOS
 
 		// Issue #886: TEMPORARY FIX FOR TRANSPARENT JPEGS IN IOS4
-		else if ( ( [[CCConfiguration sharedConfiguration] OSVersion] >= kCCiOSVersion_4_0) &&
-				  ( [lowerCase hasSuffix:@".jpg"] || [lowerCase hasSuffix:@".jpeg"] )
-				 ) {
-			// convert jpg to png before loading the texture
-
-			CCLOG(@"cocos2d: WARNING: Loading JPEG image. For faster loading times, convert it to PVR or PNG");
-
-			ccResolutionType resolution;
-			NSString *fullpath = [CCFileUtils fullPathFromRelativePath:path resolutionType:&resolution];
-
-			UIImage *jpg = [[UIImage alloc] initWithContentsOfFile:fullpath];
-			UIImage *png = [[UIImage alloc] initWithData:UIImagePNGRepresentation(jpg)];
-			tex = [ [CCTexture2D alloc] initWithCGImage:png.CGImage resolutionType:resolution];
-			[png release];
-			[jpg release];
-
-			if( tex ){
-				dispatch_sync(_dictQueue, ^{
-					[textures_ setObject: tex forKey:path];
-				});
-			}else{
-				CCLOG(@"cocos2d: Couldn't add image:%@ in CCTextureCache", path);
-			}
-
-			// autorelease prevents possible crash in multithreaded environments
-			[tex autorelease];
-		}
+//		else if ( ([[CCConfiguration sharedConfiguration] OSVersion] < kCCiOSVersion_5_0) &&
+//				  ( [lowerCase hasSuffix:@".jpg"] || [lowerCase hasSuffix:@".jpeg"] )
+//				 ) {
+//			// convert jpg to png before loading the texture
+//
+//			CCLOG(@"cocos2d: WARNING: Loading JPEG image. For faster loading times, convert it to PVR or PNG. See issue #886");
+//
+//			ccResolutionType resolution;
+//			NSString *fullpath = [CCFileUtils fullPathFromRelativePath:path resolutionType:&resolution];
+//
+//			UIImage *jpg = [[UIImage alloc] initWithContentsOfFile:fullpath];
+//			UIImage *png = [[UIImage alloc] initWithData:UIImagePNGRepresentation(jpg)];
+//			tex = [ [CCTexture2D alloc] initWithCGImage:png.CGImage resolutionType:resolution];
+//			[png release];
+//			[jpg release];
+//
+//			if( tex ){
+//				dispatch_sync(_dictQueue, ^{
+//					[textures_ setObject: tex forKey:path];
+//				});
+//			}else{
+//				CCLOG(@"cocos2d: Couldn't add image:%@ in CCTextureCache", path);
+//			}
+//
+//			// autorelease prevents possible crash in multithreaded environments
+//			[tex autorelease];
+//		}
 
 		else {
 
